# RCWASolver

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Device.cpp  Device.h  RCWA.cpp  RCWA.h  RCWASolver.cpp  RCWASolver.sln  RCWASolver.vcxproj  RCWASolver.vcxproj.filters  README.md  RcwaGapSolve.cpp  common.h  convulationMatrix.cpp  convulationMatrix.h  fftMatlab.cpp  fftMatlab.h  fftshiftMatlab.cpp  fftshiftMatlab.h  index_z2.txt  index_z3.txt  index_z6.txt  main.cpp  resource.h  test.txt  userFunc.cpp  userFunc.h
Input/: Index_imag_z_1_22.txt  Index_imag_z_2_1.txt  Index_imag_z_5_1.txt  Index_real_z_2_1.txt  Index_real_z_3_1.txt  LayerPos.txt  lambda.txt
data/: RT.opju
examples1/: example1.cpp
examples1/Input/: Index_imag_z_4_1.txt  Index_real_z_2_78.txt  Index_real_z_4_1.txt  Index_real_z_5_1.txt  dispersive.lsf  lambda.txt  model.lsf  x.txt  z.txt  多层.fsp
examples1/Output/: Rp.txt  Rs.txt
include/: common.h  convulationmatrix.h  fftmatlab.h  rcwa.h  userfunc.h
input/: 1.lsf  DATA.mat  IndexZ2.txt  IndexZ3.txt  IndexZ4.txt  Index_Imag_Z3.txt  Index_Imag_Z4.txt  Index_Imag_Z5.txt  Index_imag_z_2_1.txt  Index_imag_z_2_10.txt  Index_imag_z_2_11.txt  Index_imag_z_2_12.txt  Index_imag_z_2_13.txt  Index_imag_z_2_14.txt  Index_imag_z_2_15.txt  Index_imag_z_2_16.txt  Index_imag_z_2_17.txt  Index_imag_z_2_18.txt  Index_imag_z_2_19.txt  Index_imag_z_2_2.txt  Index_imag_z_2_20.txt  Index_imag_z_2_21.txt  Index_imag_z_2_22.txt  Index_imag_z_2_23.txt  Index_imag_z_2_24.txt  Index_imag_z_2_25.txt  Index_imag_z_2_26.txt  Index_imag_z_2_27.txt  Index_imag_z_2_28.txt  Index_imag_z_2_29.txt  Index_imag_z_2_3.txt  Index_imag_z_2_30.txt  Index_imag_z_2_31.txt  Index_imag_z_2_32.txt  Index_imag_z_2_33.txt  Index_imag_z_2_34.txt  Index_imag_z_2_35.txt  Index_imag_z_2_36.txt  Index_imag_z_2_37.txt  Index_imag_z_2_38.txt  (+386 more)
output/: Rp.txt  Rs.txt  Tp.txt  Ts.txt  lambda.txt
src/: Device.cpp  Device.h  common.h  convulationmatrix.cpp  fftmatlab.cpp  fftshiftmatlab.cpp  rcwa.cpp  userFunc.cpp  userFunc.h  userfunc.cpp
